--- a/index.html
+++ b/index.html
@@ -5,32 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="./styles/styles.css">
   
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
+  <body>
+    <main>
+      <article class="product">
 
-  Perfume
+        <picture class = "product__img">
+          <source srcset="./images/image-product-desktop.jpg" media = "(min-width: 600px)">
+          <img src="./images/image-product-mobile.jpg" alt="Perfume Bottle">
+        </picture>
 
-  Gabrielle Essence Eau De Parfum
+        <div class="product__content">
+          <p class = "product__category">Perfume</p>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+          <h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
 
-  $149.99
-  $169.99
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.
+          <div class="flex-group">
+          <p class="product__price">
+          <span class = "visually-hidden">Current Price</span>
+            $149.99
+          </p>
+          <p class="product__original-price">
+            <span class = "visually-hidden">Original Price</span>
+            <s>$169.99</s>
+          </p>
+          </div>
 
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+          <button class = "button" data-icon = "shopping-cart">Add to Cart</button>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
